[package]
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "km2"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.2"

[dependencies.stm32f0xx-hal]
features = ["stm32f030", "rt"]
version = "0.14.0"
path = "../stm32f0xx-hal"

[dependencies.embedded-hal]
version="0.2.2"
features = ["unproven"]

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "km2"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
